--- a/Programing Language/Flutter/dcd_newsapp_fundamental - buntu v0.000 (gagal fetch api)/android/gradle/wrapper/gradle-wrapper.properties
+++ b/Programing Language/Flutter/dcd_newsapp_fundamental - buntu v0.000 (gagal fetch api)/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,6 @@
+#Sat Oct 04 16:55:17 IST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.5-all.zip
